Data_on_Kubernetes[DOK]/Kubernetes/service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-service
spec:
    selector:
    app: my-app
    ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
    type: LoadBalancer
